--- a/Update 1.0.1
+++ b/Update 1.0.1
@@ -1,12 +1,18 @@
-['Fixed'] = {
-    '- Open ClassShop';
-    '- Dimension Teleports';
-    '- Saving and Loading Custom Locations';
-};
-['Added'] = {
-    '+ Script Version Checker';
-    '+ Update Prints';
-    '+ Saving Custom Locations in one Dimension dont transfer to other dimensions';
-    '+ Custom Locations are still saved from every dimension, only access saved locations of dimension currently in';
-    '+ Dropdown of Saved Locations, will load last location selected of dimension currently in';
-};
+[1.0.2]
+    ['Fixed'] = {
+        '- Typo in AutoQuest, throwing an error and crashing script';
+        '- Saving and Unsaving Champions';
+    };
+[1.0.1]
+    ['Fixed'] = {
+        '- Open ClassShop';
+        '- Dimension Teleports';
+        '- Saving and Loading Custom Locations';
+    };
+    ['Added'] = {
+        '+ Script Version Checker';
+        '+ Update Prints';
+        '+ Saving Custom Locations in one Dimension dont transfer to other dimensions';
+        '+ Custom Locations are still saved from every dimension, only access saved locations of dimension currently in';
+        '+ Dropdown of Saved Locations, will load last location selected of dimension currently in';
+    };
